--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="top-banner">
-      <div style="display: flex; align-items: center;"><img src="images/logo.png" alt="Penguin Publishing Company Logo" class="logo" /><span style="margin-left: 10px; font-size: 1.2em; font-weight: bold; color: black;">Penguin Publishing Company</span></div>
+      <div style="display: flex; align-items: center;"><img src="images/Logo.png" alt="Penguin Publishing Company Logo" class="logo" /><span style="margin-left: 10px; font-size: 1.2em; font-weight: bold; color: black;">Penguin Publishing Company</span></div>
       <!-- Navigation Bar -->
 <nav>
         <ul class="horizontal">
@@ -87,7 +87,7 @@
       </section>
     </div>
     <div class="copyright">
-      <img src="images/logo.png" alt="Penguin Publishing Logo" class="logo-footer" />
+      <img src="images/Logo.png" alt="Penguin Publishing Logo" class="logo-footer" />
     <p> Copyright Penguin Publishing Company 2025 </p>
     </div>
   </footer>
