--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   </header>
 
   <section class="hero">
-    <img src="images/Contacthero.jpg" alt="Penguin hero image" class="hero-img" />
+    <img src="images/ContactHero.jpg" alt="Penguin hero image" class="hero-img" />
   </section>
 
  <!-- Main Content -->
